[package]
authors = ["Fabio Mendes <fabiojmendes@gmail.com>"]
edition = "2018"
name = "rust-game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
default-features = false
features = ["image"]
version = "*"
